--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.0.13",
-    "axios": "^1.6.7",
+    "axios": "^1.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "For more information please visit: https://www.linkedin.com/pulse/building-weather-app-aws-amplify-step-by-step-guide-dinesh-sharma-6j30c%3FtrackingId=D2qiJWHbSxqPiG2ebufNGA%253D%253D/?trackingId=D2qiJWHbSxqPiG2ebufNGA%3D%3D",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
